--- a/Website/style.css
+++ b/Website/style.css
@@ -29,6 +29,11 @@ h1{
 .result{
 font-size:24px;
 }
+.result>a{
+    font-size:24px;
+
+}
+
 .intro_bg{
     background-image:url("바다.jpeg");
     width:100%;
@@ -167,6 +172,7 @@ margin:25px auto;
 
 }
 .main_text1>.contents1{
+    padding-bottom:10px;
     text-align:center;
 }
 .service{
@@ -174,30 +180,108 @@ margin:25px auto;
     display:flex;
     margin: auto;
     height:427px;
-   background:skyblue;
+
 }
 .service>.contents2{
     padding:20px;
     }
-.mian_text2{
-    width:100%;
-    height:601px;
-    margin:auto;
-    background:lightgray;
-}
-.mian_text2>h1{
-    padding-top:50px;
-   text-align:center;
-}
+
 
 .span{ 
-    width:500px;
+    width:400px;
         height:30px;
         color:#fff;
         font-size:30px;
-        background:rgba(255,255,255,0.2);
+        font-weight: lighter;
         padding:8px;
         margin:20px;
         text-align:center;
-        border-radius:20px;
     }
+ 
+.main_text2{
+        width:100%;
+        height:481px;
+        margin:auto;
+        background:url("1.jpg");
+    }
+ .main_text2>h1{
+        padding-top:50px;
+       text-align:center;
+    }
+
+.main_text2>ul{
+    display:flex;
+    padding-top:138px
+
+}
+.main_text2>ul>li{
+   flex:1; 
+   text-align:center;
+}
+.main_text2>ul>li>div,
+.main_text2>ul>li>div>h1{
+    color:#000;
+
+}
+.main_text2>ul>li>h2{
+    flex:1; 
+    text-align:center;
+    font-weight:lighter;
+ }
+.more2{
+    width:220px;
+    height:40px;
+    border:1px solid black;
+    line-height:40px;
+    cursor:pointer;
+    margin: 16px auto;
+}
+footer{
+    width:100%;
+    height:100px;
+border-top:2px solid #222;
+}
+#bottomMenu{
+    width: 100%px;
+    height: 20px;
+}
+#bottomMenu ul{
+    margin-top:15px;
+}
+#bottomMenu ul li{
+    float:left;
+    padding:5px 20px;
+    border-right:1px solid #ddd;
+}
+#bottomMenu ul li:last-child{
+    border-right:none;
+}
+#bottomMenu ul li a,#bottomMenu ul li a:visited{
+    font-size:15px;
+    color:#666;
+}
+#bottomMenu{
+    width:100%;
+HEIGHT:20PX;
+position:relative;
+}
+#company{
+    clear:left;
+    margin-top:25px;
+    margin-left:20px;
+}
+#id{
+    position:absolute;
+    right:0;
+    margin-top:1px;
+    margin-right:50px;
+}
+p1{
+    font-size:14px;
+    color:#000;
+}
+
+p{
+    font-size:14px;
+    color:#aaa;
+}
