--- a/homepage1.css
+++ b/homepage1.css
@@ -19,7 +19,7 @@ h1 {
     font-weight: bold;
 }
 .intro_bg {
-    background-image: url("006.PNg");
+    background-image: url("006.png");
     width: 100%;
     height: 618px;
 }
